<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55ACEF"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/title_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/footer_bg"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/rate_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="1dp"
            android:src="@drawable/back"

            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/text_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center"
            android:padding="2dp"
            android:text="RATE &amp; REVIEW"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:layout_weight="1"/>



    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:weightSum="3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_value_your_feedback"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_review"
        android:padding="5dp"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/comment"
        android:gravity="start"
        android:padding="5dp"
        android:background="#ffffff"
        android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal|bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/rating_gold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView6"
                android:src="@drawable/rating_gold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView7"
                android:src="@drawable/rating_gold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/rating_gold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/rating_white"
                android:layout_gravity="left|bottom"
                android:focusableInTouchMode="false" />
        </LinearLayout>

        <!-- <RatingBar
             android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:numStars="5"
             style="@style/CustomRatingBar"
             android:stepSize="2"
             android:layout_height="50dp" />
 -->
    </FrameLayout>
    <Button
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:background="#F53952" />

</LinearLayout>





</LinearLayout>