<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55ACEF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/footer_bg"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="1dp"
            android:src="@drawable/back"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back"
            android:gravity="center_horizontal|center"
            android:padding="2dp"
            android:text="@string/store_header"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:layout_weight="5"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/playlist_search"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/playlist_list" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="23sp"
                android:text="Alpha Meditation"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_list_detail"
                android:layout_margin="2dp"
                android:textSize="15sp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="5"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/sample"
            android:textColor="#58ADEF"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   "/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/full_version"
            android:textColor="#58ADEF"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="ALPHA MEDITATION"
            android:textColor="#FEFFFF"
            android:gravity="center_vertical"
            android:textSize="23sp"
            android:background="#2F485C"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#232323"
            android:textSize="18sp"
            android:text="@string/play_list_detail"
            android:background="#FFFFFF"
            android:padding="5dp"/>

    </LinearLayout>


</LinearLayout>